# saorsa-gossip

./: .gitignore  CLAUDE.md  COORDINATOR_FIX_PLAN.md  Cargo.toml  DESIGN.md  MEDIUM_PRIORITY_COMPLETION.md  QUICKSTART_SPEC2.md  README.md  SPEC.md  SPEC2.md  SPEC2_IMPLEMENTATION_PLAN.md  TEST_HARNESS_COMPLETION_SUMMARY.md  TEST_HARNESS_ENHANCEMENT_PLAN.md  audit-results.json
.github/workflows/: ci.yml  release.yml
benches/: Cargo.toml  performance.rs
crates/coordinator/: Cargo.toml
crates/coordinator/src/: bootstrap.rs  cache.rs  foaf.rs  handler.rs  lib.rs  peer_cache.rs  publisher.rs  topic.rs
crates/crdt-sync/: Cargo.toml
crates/crdt-sync/src/: lib.rs  lib.rs.bak
crates/groups/: Cargo.toml
crates/groups/src/: lib.rs
crates/identity/: Cargo.toml
crates/identity/src/: lib.rs
crates/load-test/: Cargo.toml
crates/load-test/src/: lib.rs
crates/membership/: Cargo.toml
crates/membership/src/: lib.rs
crates/presence/: Cargo.toml
crates/presence/src/: lib.rs
crates/pubsub/: Cargo.toml
crates/pubsub/src/: lib.rs
crates/rendezvous/: Cargo.toml
crates/rendezvous/src/: lib.rs
crates/simulator/: Cargo.toml
crates/simulator/src/: lib.rs  simulated_transport.rs
crates/transport/: Cargo.toml
crates/transport/src/: ant_quic_transport.rs  lib.rs  peer_cache.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
docs/: DOCUMENTATION_CLEANUP_SUMMARY.md  ant-quic-integration.md  audit-updated.md  plumtree-implementation-plan.md  saorsa-mls-0.3.0-capabilities.md  transport-integration-summary.md
docs/adr/: ADR-001-protocol-layering.md  ADR-002-post-quantum-cryptography.md  ADR-003-delta-crdt-synchronization.md  ADR-004-seedless-bootstrap.md  ADR-005-rendezvous-shards.md  ADR-006-mls-group-encryption.md  ADR-007-foaf-discovery.md  ADR-008-stream-multiplexing.md  ADR-009-peer-scoring.md  ADR-010-deterministic-simulator.md  README.md
docs/archived/: ULTRATHINK_SUMMARY.md  audit.md  plumtree-dependencies.md  plumtree-design.md  plumtree-implementation-summary.md
examples/: chaos_demo.rs  load_test_demo.rs  simulator_demo.rs  throughput_test.rs  transport_benchmark.rs
scripts/: coverage.sh  medium-priority-improvements.sh
tests/: Cargo.toml  chaos_gossip_integration.rs  e2e_workflow_tests.rs  integration_tests.rs  property_tests.rs
