[workspace]
members = [
    "crates/types",
    "crates/transport",
    "crates/membership",
    "crates/pubsub",
    "crates/presence",
    "crates/crdt-sync",
    "crates/groups",
    "crates/identity",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["David Irvine <david@saorsa.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dirvine/saorsa-gossip"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"

# Networking
bytes = "1.5"
anyhow = "1.0"

# Cryptography (PQC)
# Note: These will need actual PQC implementations
# saorsa-pqc = { path = "../saorsa-pqc" }
# saorsa-mls = { path = "../saorsa-mls" }
# ant-quic = { path = "../ant-quic" }

# Hashing
blake3 = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# CRDT
# We'll need delta-CRDT implementations

# Testing
proptest = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
