[package]
name = "saorsa-gossip-integration-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[test]]
name = "integration_tests"
path = "integration_tests.rs"

[[test]]
name = "property_tests"
path = "property_tests.rs"

[[test]]
name = "e2e_workflow_tests"
path = "e2e_workflow_tests.rs"

[[test]]
name = "chaos_gossip_integration"
path = "chaos_gossip_integration.rs"

[dependencies]
saorsa-gossip-coordinator = { path = "../crates/coordinator" }
saorsa-gossip-identity = { path = "../crates/identity" }
saorsa-gossip-membership = { path = "../crates/membership" }
saorsa-gossip-pubsub = { path = "../crates/pubsub" }
saorsa-gossip-types = { path = "../crates/types" }
saorsa-gossip-crdt-sync = { path = "../crates/crdt-sync" }
saorsa-gossip-presence = { path = "../crates/presence" }
saorsa-gossip-groups = { path = "../crates/groups" }
saorsa-gossip-rendezvous = { path = "../crates/rendezvous" }
saorsa-gossip-simulator = { path = "../crates/simulator" }

tokio = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
bincode = { workspace = true }
proptest = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
