[package]
name = "saorsa-gossip-crdt-sync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
saorsa-gossip-types = { path = "../types" }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
