[package]
name = "saorsa-gossip-membership"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
saorsa-gossip-types = { path = "../types" }
saorsa-gossip-transport = { path = "../transport" }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = { workspace = true }
