[package]
name = "saorsa-gossip-transport"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "QUIC transport for Saorsa Gossip with ant-quic, NAT traversal, and stream multiplexing"
keywords = ["p2p", "gossip", "quic", "nat-traversal", "networking"]
categories = ["network-programming", "asynchronous"]

[dependencies]
saorsa-gossip-types = { version = "0.1.0", path = "../types" }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
ant-quic = "0.10.1"

[dev-dependencies]
proptest = { workspace = true }
