[package]
name = "saorsa-gossip-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bytes = { workspace = true }
serde = { workspace = true }
blake3 = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
