[package]
name = "saorsa-gossip-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types for Saorsa Gossip: TopicId, PeerId, MessageHeader, and wire format"
keywords = ["p2p", "gossip", "distributed", "networking", "types"]
categories = ["network-programming", "data-structures"]
readme = "../../README.md"

[dependencies]
bytes = { workspace = true }
serde = { workspace = true }
blake3 = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
